:before/:after pseudo elements do not always apply to the proper element https://bugs.webkit.org/show_bug.cgi?id=93925

Reviewed by Dimitri Glazkov.

Source/WebCore:

Disable sharing a style with siblings if :after or :before pseudo style
is unique.

Test: fast/css/before-after-pseudo-class.html

* css/StyleResolver.cpp:
(WebCore::StyleResolver::canShareStyleWithElement):
Added a new condition, hasUniquePseudoStyle.
* rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::hasUniquePseudoStyle):
Added to check whether any pseudo style has unique bit or not.
(WebCore):
* rendering/style/RenderStyle.h:

LayoutTests:

* fast/css/before-after-pseudo-class-expected.html: Added.
* fast/css/before-after-pseudo-class.html: Added.


Canonical link: https://commits.webkit.org/128487@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143300 268f45cc-cd09-0410-ab3c-d52691b4dbfc